Updated comments in HTML

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <!-- API key -->
   <script type="text/javascript" src="./static/js/config.js"></script>
   
-  <!-- Our JavaScript -->
+  <!-- JavaScript -->
   <script type="text/javascript" src="./Leaflet-Part-1/logic.js"></script>
 </body>
 
